Fixed Overflow Scrolling

--- a/src/Pages/LandingPage/Navbar/Navbar.css
+++ b/src/Pages/LandingPage/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   margin-top: 0;
   padding: 1rem 2rem;
   background: transparent ;
-  /* backdrop-filter: blur(5px); */
+  backdrop-filter: blur(5px);
   position: fixed;
   top : 0;
   left: 0;
