--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
-
-
-/* Existing Index.css */
-
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Quicksand:wght@300;400;700&display=swap');
 
 *{
   font-family: 'Quicksand', 'League Spartan', sans-serif ;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height:100vh;
 }
 
 :root {
